miniconf/tests/ui/enum-named.stderr
error: Only newtype (single field tuple) and unit enum variants are supported.
 --> tests/ui/enum-named.rs:5:5
  |
5 |     A { a: i32 },
  |     ^
