miniconf/tests/ui/enum-named.rs
use miniconf::Tree;

#[derive(Tree)]
pub enum E {
    A { a: i32 },
}

fn main() {}
